--- a/LanguageSchool/Views/ContactRequest/Create.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Create.cshtml
@@ -17,6 +17,26 @@
 
             <div class="form-group">
                 <div class="control-label col-md-2">
+                    <strong>Imię</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Nazwisko</strong>
+                </div>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="control-label col-md-2">
                     <strong>Numer telefonu</strong>
                 </div>
                 <div class="col-md-10">
