--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -139,7 +139,7 @@
                         Utworzono
                     </th>
                     <th>
-                        Użytkownik
+                        Imię i nazwisko
                     </th>
                     <th>
                         Miasto
@@ -156,15 +156,19 @@
                 </tr>
                 @foreach (var item in Model)
                 {
+                    string controllerName = "UserData";
+
+                    if (item.IsContactRequest == 1)
+                    {
+                        controllerName = "ContactRequest";
+                    }
+
                     <tr>
                         <td>
                             @item.CreationDate.ToString("yyyy/MM/dd")
                         </td>
                         <td>
-                            @if (item.IsContactRequest == 0)
-                            {
-                                @Html.ActionLink(item.FullName, "Details", new { id = item.Id })
-                            }
+                            @Html.ActionLink(item.FullName, "Details", controllerName, new { id = item.Id }, null)
                         </td>
                         <td>
                             @item.City
@@ -173,15 +177,7 @@
                             @item.Street
                         </td>
                         <td>
-                            
-                            @if (item.IsContactRequest == 1)
-                            {
-                                @Html.ActionLink(item.PhoneNumber, "Details", "ContactRequest", new { id = item.Id }, null)
-                            }
-                            else
-                            {
-                                @item.PhoneNumber
-                            }
+                            @item.PhoneNumber
                         </td>
                         <td>
                             @item.EmailAdress
