--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -140,18 +140,26 @@
 
                 @for (int i = 0; i < 12; i++)
                 {
-                    var days = Model.UserWorkHours.ElementAt(i);
                     <tr>
                         @for (int j = 0; j < 7; j++)
-                    {
-                        var currentHour = i + 8 + ".15";
-                        var nextHour = (i + 8 + 1) + ".15";
-                            <td>
-                                <label class="btn btn-default btn-block"> @*checked*@
-                                    @Html.EditorFor(model => model.UserWorkHours[i][j], new { htmlAttributes = new { @style = "display: none" } })
-                                    @currentHour - @nextHour
-                                </label>
-                            </td>
+                        {
+                            if (!@Model.UserWorkHours[i][j])
+                            {
+                                var currentHour = i + 8 + ".15";
+                                var nextHour = (i + 8 + 1) + ".15";
+                                <td>
+                                    <label class="btn btn-default btn-block">
+                                        @*checked*@
+                                        @Html.EditorFor(model => model.UserWorkHours[i][j], new { htmlAttributes = new { @style = "display: none" } })
+                                        @currentHour - @nextHour
+                                    </label>
+                                </td>
+                            }
+                            else
+                            {
+                                <td bgcolor="DarkSalmon">
+                                </td>
+                            }
                         }
                     </tr>
                 }
