Formatka do dodawania kursu

--- a/LanguageSchool/Views/Course/Create.cshtml
+++ b/LanguageSchool/Views/Course/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageSchool.Models.Course
+﻿@model LanguageSchool.Models.ViewModels.CourseViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -7,68 +7,87 @@
 
 @using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
+    <div class="container thumbnail">
+        @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            
+            <div class="row form-group">
+                <div class="control-label col-md-2">
+                    <strong>Nazwa</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Nazwa</strong>
+                <div class="control-label col-md-2">
+                    <strong>Poziom</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(model => model.LanguageProficencyId, Model.LanguageProficenciens, new { @class = "form-control" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Liczba godzin</strong>
-            </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NumberOfHours, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NumberOfHours, "", new { @class = "text-danger" })
-            </div>
-        </div>
+            <div class="row form-group">
+                <div class="control-label col-md-2">
+                    <strong>Liczba godzin</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.NumberOfHours, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.NumberOfHours, "", new { @class = "text-danger" })
+                </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Opis</strong>
+                <div class="control-label col-md-2">
+                    <strong>Aktywny</strong>
+                </div>
+                <div class="col-md-4">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.IsActive)
+                        @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                    </div>
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Data rozpoczęcia</strong>
-            </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
+            <div class="row form-group">
+                <div class="control-label col-md-2">
+                    <strong>Data rozpoczęcia</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                </div>
 
-        <div class="form-group">
-            <div class="control-label col-md-2">
-                <strong>Data zakończenia</strong>
+                <div class="control-label col-md-2">
+                    <strong>Data zakończenia</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+                </div>
             </div>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Wyślij" class="btn btn-default" />
+            <div class="row form-group">
+                <div class="col-md-6">
+                </div>
+                <div class="control-label col-md-2">
+                    <strong>Opis</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row form-group">
+                <div class="col-md-offset-2 col-md-4">
+                    <input type="submit" value="Utwórz" class="btn btn-default" />
+                </div>
             </div>
         </div>
     </div>
-                        }
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
