--- a/LanguageSchool/Views/Course/Index.cshtml
+++ b/LanguageSchool/Views/Course/Index.cshtml
@@ -40,7 +40,7 @@
             {
                 <tr>
                     <td>
-                        @item.StartDate
+                        @item.StartDateShown
                     </td>
                     <td>
                         @Html.ActionLink(item.Name, "Details", new { id = item.Id })
