Dodanie widoku dla poszczególnych grup, wygenerowanie struktur dla grup

--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -144,7 +144,7 @@
                     @item.CreationDate.ToString("yyyy/MM/dd")
                 </td>
                 <td>
-                    @Html.ActionLink(item.Name, "Edit", new { id = item.Id })
+                    @Html.ActionLink(item.Name, "FullDetails", new { id = item.Id })
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
