--- a/LanguageSchool/Views/Group/Create.cshtml
+++ b/LanguageSchool/Views/Group/Create.cshtml
@@ -8,27 +8,28 @@
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
+        <div class="row thumbnail">
+            <div class="form-group">
+                <div class="control-label col-md-2">
+                    <strong>Nazwa</strong>
+                </div>
+                <div class="col-md-3">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
 
-    <div class="row thumbnail">
-        <div class="control-label col-md-2">
-            <strong>Nazwa</strong>
-        </div>
-        <div class="col-md-3">
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-        </div>
+                <div class="control-label col-md-2">
+                    <strong>Prowadzący</strong>
+                </div>
+                <div class="col-md-3">
+                    @Html.DropDownListFor(model => model.UserId, Model.Users, new { @class = "form-control" })
+                </div>
 
-        <div class="control-label col-md-2">
-            <strong>Prowadzący</strong>
+                <div class="col-md-2">
+                    <input type="submit" value="Utwórz" class="btn btn-default" />
+                </div>
+            </div>
         </div>
-        <div class="col-md-3">
-            @Html.DropDownListFor(model => model.UserId, Model.Users, new { @class = "form-control" })
-        </div>
-
-        <div class="col-md-2">
-            <input type="submit" value="Utwórz" class="btn btn-default" />
-        </div>
-    </div>
 }
 
 @section Scripts {
