Działająca postać pickera

--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -118,7 +118,7 @@
             <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("List", "Course")'">Lista</button>
         </div>
         <div class="col-md-4">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "Group")/@Model.Id'">Dodaj grupę</button>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "Group")'">Dodaj grupę</button>
         </div>
     </div>
 </div>
