Uwzględnienie godzin na końcu skali

--- a/LanguageSchool/Views/Group/PickHours.cshtml
+++ b/LanguageSchool/Views/Group/PickHours.cshtml
@@ -33,7 +33,20 @@
                 </div>
             </div>
         </div>
-        
+
+        <p />
+
+        <div class="row thumbnail">
+            <div class="form-group">
+                <div class="control-label col-md-3">
+                    <strong>Liczba godzin dla kursu</strong>
+                </div>
+                <div class="col-md-9">
+                    @Html.DisplayFor(model => model.CourseNumberOfHours)
+                </div>
+            </div>
+        </div>
+
         <p/>
 
         <div class="row thumbnail">
