--- a/LanguageSchool/Views/Group/Create.cshtml
+++ b/LanguageSchool/Views/Group/Create.cshtml
@@ -8,6 +8,7 @@
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.CourseId)
+    @Html.HiddenFor(model => model.CourseNumberOfHours)
 
     @Html.AntiForgeryToken()
         <div class="row thumbnail">
