Poprawka wyświetlania dla informacji o kursie

--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -46,14 +46,14 @@
                 <strong>Data rozpoczęcia</strong>
             </div>
             <div class="col-md-4">
-                @Html.DisplayFor(model => model.StartDate)
+                @Model.StartDate.ToString("yyyy/MM/dd")
             </div>
 
             <div class="control-label col-md-2">
                 <strong>Data zakończenia</strong>
             </div>
             <div class="col-md-4">
-                @Html.DisplayFor(model => model.EndDate)
+                @Model.EndDate.ToString("yyyy/MM/dd")
             </div>
         </div>
 
