--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -1,67 +1,72 @@
-﻿@model LanguageSchool.Models.Group
+﻿@model LanguageSchool.Models.ViewModels.GroupViewModel
 
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<div class="container">
+    <div class="row col-md-12">
+        <div class="thumbnail col-md-4">
+            <div class="col-md-6">
+                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "Group")'">Edytuj</button>
+            </div>
+            <div class="col-md-6">
+                <button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("Delete", "Group")'">Usuń</button>
+            </div>
+        </div>
+    </div>
+    <div class="row thumbnail col-md-12">
+        <div class="col-md-3">
+            <label>
+                Nazwa
+            </label>
+        </div>
 
-<div>
-    <h4>Group</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsDeleted)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreationDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreationDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeletionDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletionDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
+        <div class="col-md-3">
             @Html.DisplayFor(model => model.Name)
-        </dd>
+        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
+        <div class="col-md-3">
+            <label>
+                Prowadzący
+            </label>
+        </div>
+        <div class="col-md-3">
+            @Html.DisplayFor(model => model.Teacher.Fullname)
+        </div>
+    </div>
+    <div class="row col-md-12">
+        <div class="thumbnail col-md-3">
+            <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("AddUser", "Group")'">Dodaj nowego ucznia</button>
+        </div>
+    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Course.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Course.Name)
-        </dd>
-
-    </dl>
+    @if (Model.Students.Any())
+    {
+        <p />
+        <div class="row thumbnail col-md-12">
+            <table class="table table-striped table-bordered">
+                <tr>
+                    <th>
+                        Utworzono
+                    </th>
+                    <th>
+                        Uczeń
+                    </th>
+                </tr>
+                @foreach (var student in Model.Students)
+                {
+                    <tr>
+                        <td>
+                            @student.CreationDate
+                        </td>
+                        <td>
+                            @student.Fullname
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
