--- a/LanguageSchool/Views/Group/PickHours.cshtml
+++ b/LanguageSchool/Views/Group/PickHours.cshtml
@@ -9,7 +9,7 @@
 {
     @Html.HiddenFor(model => model.CourseId)
     @Html.HiddenFor(model => model.Name)
-    @Html.HiddenFor(model => model.SelectedUser.Id)
+    @Html.HiddenFor(model => model.Teacher.Id)
 
     @Html.AntiForgeryToken()
         <div class="row thumbnail">
@@ -25,7 +25,7 @@
                     <strong>Prowadzący</strong>
                 </div>
                 <div class="col-md-3">
-                    @Html.DisplayFor(model => model.SelectedUser.Fullname)
+                    @Html.DisplayFor(model => model.Teacher.Fullname)
                 </div>
 
                 <div class="col-md-2">
