--- a/LanguageSchool/Views/UserData/Details.cshtml
+++ b/LanguageSchool/Views/UserData/Details.cshtml
@@ -5,156 +5,156 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row thumbnail col-xs-12">
-    <div class="col-xs-4">
-        <label>
-            Login:
-        </label>
-
-        @Html.DisplayFor(model => model.User.Login)
+<div class="container">
+    <div class="row align-items-center h-100">
+        <div class="col-xs-4">
+        </div>
+        <div class="col-xs-4">
+            <div>
+                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Edit", "UserData")'">Edytuj</button>
+            </div>
+        </div>
     </div>
 
-    <div class="col-xs-4">
-        <div class="col-xs-6">
+    <div class="row thumbnail col-xs-12">
+        <div class="col-xs-4">
             <label>
-                Hasło:
+                Login:
             </label>
+
+            @Html.DisplayFor(model => model.User.Login)
         </div>
 
-        <div class="col-xs-6" id="placeholder" style="display: block">
-            ●●●●●●●●
+        <div class="col-xs-4">
+            <div class="col-xs-6">
+                <label>
+                    Hasło:
+                </label>
+            </div>
+
+            <div class="col-xs-6" id="placeholder" style="display: block">
+                ●●●●●●●●
+            </div>
+            <div class="col-xs-6" id="password" style="display: none">
+                @Html.DisplayFor(model => model.User.Password)
+            </div>
         </div>
-        <div class="col-xs-6" id="password" style="display: none">
-            @Html.DisplayFor(model => model.User.Password)
+
+        <div class="col-xs-4">
+            <label>
+                Pokaż hasło:
+            </label>
+            <input type="checkbox" onclick="showPassword()">
         </div>
     </div>
 
-    <div class="col-xs-4">
-        <label>
-            Pokaż hasło:
-        </label>
-        <input type="checkbox" onclick="showPassword()">
-    </div>
-</div>
+    <p />
 
-<p/>
+    <div class="row thumbnail col-xs-12">
+        <dl class="dl-horizontal">
+            <dt>
+                Data utworzenia wpisu
+            </dt>
 
-<div class="row thumbnail col-xs-12">
-    <dl class="dl-horizontal">
-        <dt>
-            Data utworzenia wpisu
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CreationDate)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreationDate)
-        </dd>
+            <dt>
+                Imię
+            </dt>
 
-        <dt>
-            Imię
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dt>
+                Nazwisko
+            </dt>
 
-        <dt>
-            Nazwisko
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Surname)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Surname)
-        </dd>
+            <dt>
+                Miasto
+            </dt>
 
-        <dt>
-            Miasto
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.City)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.City)
-        </dd>
+            <dt>
+                Ulica
+            </dt>
 
-        <dt>
-            Ulica
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Street)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Street)
-        </dd>
+            <dt>
+                Numer domu
+            </dt>
 
-        <dt>
-            Numer domu
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.HouseNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.HouseNumber)
-        </dd>
+            <dt>
+                Numer mieszkania
+            </dt>
 
-        <dt>
-            Numer mieszkania
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.HomeNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.HomeNumber)
-        </dd>
+            <dt>
+                Publiczny numer telefonu
+            </dt>
 
-        <dt>
-            Publiczny numer telefonu
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.PublicPhoneNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PublicPhoneNumber)
-        </dd>
+            <dt>
+                Prywatny numer telefonu
+            </dt>
 
-        <dt>
-            Prywatny numer telefonu
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.PrivatePhoneNumber)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PrivatePhoneNumber)
-        </dd>
+            <dt>
+                Adres email
+            </dt>
 
-        <dt>
-            Adres email
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.EmailAdress)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmailAdress)
-        </dd>
+            <dt>
+                Komentarz
+            </dt>
 
-        <dt>
-            Komentarz
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Comment)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Comment)
-        </dd>
-
-    </dl>
-</div>
-
-<p />
-
-<div class="row align-items-center h-100">
-    <div class="col-xs-4">
-    </div>
-    <div class="col-xs-4">
-        <div>
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Edit", "UserData")'">Edytuj</button>
-        </div>
+        </dl>
     </div>
 </div>
 
 <script>
-function showPassword() {
-    var placeholder = document.getElementById("placeholder");
-    var password = document.getElementById("password");
+    function showPassword() {
+        var placeholder = document.getElementById("placeholder");
+        var password = document.getElementById("password");
 
-    if (placeholder.style.display === "block") {
-        placeholder.style.display = "none";
-        password.style.display = "block";
-    } else {
-        placeholder.style.display = "block";
-        password.style.display = "none";
+        if (placeholder.style.display === "block") {
+            placeholder.style.display = "none";
+            password.style.display = "block";
+        } else {
+            placeholder.style.display = "block";
+            password.style.display = "none";
+        }
     }
-}
 </script>
