--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -36,12 +36,34 @@
             @Html.DisplayFor(model => model.Teacher.Fullname)
         </div>
     </div>
+    <div class="row thumbnail col-md-12">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th>
+                    Dzień
+                </th>
+                <th>
+                    Godziny
+                </th>
+            </tr>
+            @foreach (var groupTime in Model.Hours)
+            {
+                <tr>
+                    <td>
+                        @groupTime.DayOfWeek.PLName
+                    </td>
+                    <td>
+                        @groupTime.StartTime.15 - @(groupTime.EndTime + 1).15
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
     <div class="row col-md-12">
         <div class="thumbnail col-md-3">
             <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("AddUser", "Group")'">Dodaj nowego ucznia</button>
         </div>
     </div>
-
     @if (Model.Students.Any())
     {
         <p />
