Pobieranie wartości dla pickera godzin przy tworzeniu grupy

--- a/LanguageSchool/Views/Group/PickHours.cshtml
+++ b/LanguageSchool/Views/Group/PickHours.cshtml
@@ -85,6 +85,8 @@
                                 {
                                     <td>
                                         @Html.HiddenFor(model => model.TeacherTimetable[i][j])
+
+                                        @Model.TeacherExistingTimetable[i][j]
                                     </td>
                                 }
                                 else
