Dodanie dat rozpoczęcia i zakończenia na grupy

--- a/LanguageSchool/Views/Group/Create.cshtml
+++ b/LanguageSchool/Views/Group/Create.cshtml
@@ -11,28 +11,57 @@
     @Html.HiddenFor(model => model.CourseNumberOfHours)
 
     @Html.AntiForgeryToken()
-        <div class="row thumbnail">
-            <div class="form-group">
-                <div class="control-label col-md-2">
-                    <strong>Nazwa</strong>
-                </div>
-                <div class="col-md-3">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+
+    <div class="container">
+        <div class="row col-md-12">
+            <div class="thumbnail col-md-2">
+                <input type="submit" value="Utwórz" class="btn btn-block btn-default" />
+            </div>
+        </div>
+        <div class="row form-horizontal thumbnail col-md-12">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <div class="control-label col-md-4">
+                        <strong>Nazwa</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                    </div>
                 </div>
 
-                <div class="control-label col-md-2">
-                    <strong>Prowadzący</strong>
+                <div class="form-group">
+                    <div class="control-label col-md-4">
+                        <strong>Prowadzący</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(model => model.UserId, Model.Users, new { @class = "form-control" })
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    @Html.DropDownListFor(model => model.UserId, Model.Users, new { @class = "form-control" })
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <div class="control-label col-md-4">
+                        <strong>Data rozpoczęcia</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                    </div>
                 </div>
 
-                <div class="col-md-2">
-                    <input type="submit" value="Utwórz" class="btn btn-default" />
+                <div class="form-group">
+                    <div class="control-label col-md-4">
+                        <strong>Data zakończenia</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
 }
 
 @section Scripts {
